--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,7 +62,7 @@
                 android:layout_height="60dp"
                 android:layout_marginBottom="10dp"
                 android:layout_gravity="center"
-                android:hint="이메일을 입력하세요ㅂㅂ"
+                android:hint="이메일을 입력하세요"
                 android:inputType="textEmailAddress"
                 android:text=""
                 android:textSize="14sp"
