--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,17 +1,20 @@
-<LinearLayout
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ChatActivity">
 
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="14dp"
         android:orientation="horizontal" >
 
         <ImageView
@@ -36,57 +39,55 @@
 
     </LinearLayout>
 
-    <RelativeLayout
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/linearLayout"
+        android:id="@+id/recyclerView"
+        android:layout_above="@+id/layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <view class="androidx.appcompat.app.AlertController$RecycleListView"
-            android:id="@+id/recyclerView"
-            android:layout_above="@+id/layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:stackFromEnd="true"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
-        </view>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:stackFromEnd="true"/>
 
-        <LinearLayout
-            android:id="@+id/layout"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="bottom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/sub"
-            android:padding="6dp"
-            android:orientation="horizontal">
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/sub"
+        android:padding="6dp"
+        android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/messageText"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginRight="6dp"
-                android:hint="메세지 입력"
-                android:inputType="textMultiLine"
-                android:text=""
-                android:textSize="14sp"
-                android:textColor="@color/white"
-                android:textColorHint="#777C89"
-                android:background="@drawable/edittext_selector"
-                android:paddingStart="20dp"/>
+        <EditText
+            android:id="@+id/messageText"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginRight="6dp"
+            android:hint="메세지 입력"
+            android:inputType="textMultiLine"
+            android:text=""
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            android:textColorHint="#777C89"
+            android:imeOptions="actionSend"
+            android:background="@drawable/edittext_selector"
+            android:paddingStart="20dp" />
 
-            <TextView
-                android:id="@+id/sendButton"
-                android:background="@drawable/button_main"
-                android:layout_marginBottom="2dp"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:textColor="@color/white"
-                android:text="전송"
-                android:textSize="15sp" />
+        <TextView
+            android:id="@+id/sendButton"
+            android:background="@drawable/button_main"
+            android:layout_marginBottom="2dp"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="전송"
+            android:textSize="15sp" />
 
 
-        </LinearLayout>
-    </RelativeLayout>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
